# pyinstaller-pyarmor-pyside-demo

./: .gitignore  LICENSE  README.md  build.ps1  main.spec  pyproject.toml
src/: config.py  main.py
