[tool.poetry]
name = "pyinstaller-pyarmor-demo"
version = "0.1.0"
description = ""
authors = ["AngelLiang <ynanxiu@qq.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pyinstaller = {version = "5.3", extras = ["encryption"]}
pyarmor = "^7.5.1"
PySide6 = "^6.3.1"
uncompyle6 = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
